@@ -1,4 +1,4 @@
-docutils==0.12
-releases==1.2.1  # updated from 1.2.0
-sphinx
-alabaster
+docutils==0.13.1
+releases==1.3.0 # updated from 1.2.0
+sphinx==1.5.2
+alabaster==0.7.9
